disable actor test with mockito - for java 17